--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-Django==2.0
+asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
+Django==2.2
+django-extensions==3.0.8
+django-phonenumber-field==5.0.0
+djangorestframework==3.11.1
+djangorestframework-jwt==1.11.0
 flake8==3.8.3
+idna==2.10
 importlib-metadata==1.7.0
 mccabe==0.6.1
+mysqlclient==2.0.1
+phonenumbers==8.12.9
 pycodestyle==2.6.0
 pyflakes==2.2.0
+PyJWT==1.7.1
 pytz==2020.1
+requests==2.24.0
+sqlparse==0.3.1
+urllib3==1.25.10
 zipp==3.1.0
